--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                 <li class="list-group-item">
                     <input type="text" placeholder="1/10/2010" id="datetime" />
                 </li>
+                <li>
+                    <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                </li>
+                
             </ul>
           </div>
           <div class="col-md-9">
@@ -70,5 +74,8 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>
 </body>
 </html>
