--- a/index lesson end.html
+++ b/index lesson end.html
@@ -36,49 +36,23 @@
           </div>
         </div>
     </div>
-    <div class="container-fluid" id="bottom">
-      <div class="row">
+    <div class="container-fluid">
+        <div class="row">
           <div class="col-md-3">
-              <form class="bg-dark" style="padding-top: 15px; padding-left: 14px">
-                  <p style="font-size: 25px">Filter Search</p>
-              </form>
-              <ul class="bg-dark" style="list-style: none; padding-top: 12px; padding-left: 14px; border: 1px solid white">
-                  <li class="bg-dark">
-                      <label for="date">Enter Date</label>
-                      <div style="height:1px"></div>
-                      <input type="text" placeholder="Date (m/d/yyy)" id="datetime" />
-                      <br></br>
-                  </li>
-                  <li class="bg-dark">
-                      <label for="city">Enter City</label>
-                      <div style="height:1px"></div>
-                      <input type="text" placeholder="Roswell" id="city" />
-                      <br></br>
-                  </li>
-                  <li class="bg-dark">
-                      <label for="state">Enter State</label>
-                      <div style="height:1px"></div>
-                      <input type="text" placeholder="CA" id="state" />
-                      <br></br>
-                  </li>
-                  <li class="bg-dark">
-                      <label for="country">Enter Country</label>
-                      <div style="height:1px"></div>
-                      <input type="text" placeholder="US" id="country" />
-                      <br></br>
-                  </li>
-                  <li class="bg-dark">
-                      <label for="shape">Enter Shape</label>
-                      <div style="height:1px"></div>
-                      <input type="text" placeholder="Cicle" id="shape" />
-                      <br></br>
-                  </li>
-                  <li style="padding-bottom: 20px; padding-top: 15px">
-                      <button id="filter-btn" type="button" class="btn btn-default">
-                          Filter Table
-                      </button>
-                  </li>
+            <form class="bg-dark">
+              <p>Filter Search</p>
+              <ul class="bg-dark">
+                <li class="bg-dark">
+                  <label for="date">Enter Date</label>
+                  <input type="text" placeholder="1/10/2010" id="datetime" />
+                </li>
+                <li class="bg-dark">
+                   <button id="filter-btn" type="button" class="btn btn-default">
+                     Filter Table
+                   </button>
+                </li>
               </ul>
+             </form>
           </div>
           <div class="col-md-9">
             <table class="table table-striped">
