--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
                   <li class="bg-dark">
                       <label for="state">Enter State</label>
                       <div style="height:1px"></div>
-                      <input type="text" placeholder="CA" id="state" />
+                      <input type="text" placeholder="ca" id="state" />
                       <br></br>
                   </li>
                   <li class="bg-dark">
                       <label for="country">Enter Country</label>
                       <div style="height:1px"></div>
-                      <input type="text" placeholder="US" id="country" />
+                      <input type="text" placeholder="us" id="country" />
                       <br></br>
                   </li>
                   <li class="bg-dark">
                       <label for="shape">Enter Shape</label>
                       <div style="height:1px"></div>
-                      <input type="text" placeholder="Cicle" id="shape" />
+                      <input type="text" placeholder="cicle" id="shape" />
                       <br></br>
                   </li>
                   <li style="padding-bottom: 20px; padding-top: 15px">
